--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "cookies-next": "^4.1.0",
+    "debug": "^4.3.4",
     "next": "13.5.3",
     "next-intl": "^3.0.0-rc.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "sharp": "^0.32.6"
+    "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
+    "supports-color": "^9.4.0"
   }
 }
