--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "debug": "^4.3.4",
     "next": "13.5.3",
     "next-intl": "^3.0.0-rc.2",
+    "quill": "^1.3.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "sharp": "^0.32.6",
     "supports-color": "^9.4.0"
   }
