--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.3",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
